src/tests/InvalidTests/TestUnary2.agl
x : String = "hello";
y : String = -x; # Error: Not an unary type!
